--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <main>
 
 
-    <!-- Блок 1 -->
+    <!-- Блок 1-->
 
     <section id="promotion" class="wrapper style2">
         <div id="promotion-row" class="container wide-row">
@@ -64,6 +64,7 @@
             </div>
         </div>
     </section>
+
 
 
     <!-- Блок 2 -->
@@ -176,7 +177,7 @@
                                     <input type="text" class="form__field" id="link" name="link"
                                            placeholder="Артикулы товара для анализа (можно ссылками)? Ссылки на действующие магазины"
                                            pattern="\d+|https?://[^\s/$.?#].[^\s]*" required>
-                                    <label for="link" class="form__label">Введите артикул товара, можно цифры или
+                                    <label for="link" class="form__label">Введите артикул товара, цифры или
                                         URL:</label>
                                 </div>
 
@@ -203,12 +204,12 @@
                                               value="user-text">
                                         <label for="user-text">Напишу ниже:</label>
                                     </p>
-                                    <div class="input-group">
-                                        <textarea class="text" minlength="10" name="message" id="message">
-                                        </textarea>
-                                        <label class="user-label" for="message">Ответы сюда</label>
-                                    </div>
                                 </div>
+                                <div class="input-group">
+                                        <textarea class="text" minlength="10" name="message" id="message"></textarea>
+                                    <label class="user-label" for="message">Ответы сюда</label>
+                                </div>
+
                             </div>
                         </div>
                         <div class="col-12">
