--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
                         <li>Расскажу, как улучшить сайт до начала работ</li>
                         <li>Помогу выбрать стратегию SEO-продвижения</li>
                     </ul>
-                    <br><a href="#brief" class="button large scrolly">Получить расчет</a>
-                    <a href="#contact" class="button large scrolly">Связаться</a>
+                    <br>
+                    <button>Получить расчет</button>
+                    <button>Связаться</button>
                 </div>
             </div>
         </div>
@@ -52,7 +53,7 @@
         <div id="promotion-row" class="container wide-row">
             <img class="horn" src="images/horn.svg" alt="bullhorn">
             <h2>Специальное предложение:</h2>
-            <div class="row aln-center">
+            <div class="row">
                 <div id="promotion-box" class="box style1 wide-box">
                     <div>
                         <h3>Изучу Ваш сайт до начала работ</h3>
@@ -65,16 +66,12 @@
         </div>
     </section>
 
+    <!-- Шаги работы -->
 
-
-    <!-- Блок 2 -->
-
-
-    <!-- Items -->
     <section id="steps" class="wrapper style2">
         <div id="steps-row" class="container wide-row">
             <h2>Как проходит работа (шаги)</h2>
-            <div class="row aln-center">
+            <div class="row">
                 <div class="my-flex-cont">
 
                     <div class="my-flex-box">
@@ -120,6 +117,7 @@
         </div>
     </section>
 
+    <!-- Бриф -->
 
     <section class="contact wrapper style4" id="brief">
         <div class="container medium">
@@ -206,14 +204,13 @@
                                     </p>
                                 </div>
                                 <div class="input-group">
-                                        <textarea class="text" minlength="10" name="message" id="message"></textarea>
-                                    <label class="user-label" for="message">Ответы сюда</label>
+                                    <textarea class="text" minlength="10" name="message" id="message"></textarea>
+                                    <label for="message"></label>
                                 </div>
-
                             </div>
                         </div>
                         <div class="col-12">
-                            <a class="button large scrolly">Отправить</a>
+                            <button>Отправить</button>
                         </div>
                     </form>
                 </div>
@@ -232,7 +229,7 @@
                     <p>Индивидуальный предприниматель<br>Шилов Геннадий Игоревич</p>
                     <p>ИНН 330407536152</p>
                     <p>ОГРНИП 321332800061879</p>
-                    <a href="#brief" class="button large scrolly">Записаться на консультацию</a>
+                    <button>Записаться на консультацию</button>
                 </div>
 
 
