--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="container">
             <div class="row">
                 <span class="image fit"><img src="images/pic00.jpg" alt=""/></span>
-                <div id="header-li" class="col-8 col-7-large col-12-medium">
+                <div id="header-li">
                     <h1 id="header-h1">Привет! Я <strong>Шилов Геннадий</strong>.</h1>
                     <ul class="pluses">
                         <li>Продвину лучше и дешевле, чем в агентстве</li>
