--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
                         <p>постановка задачи</p>
                     </div>
 
-                    <div class="my-flex-box"><img src="images/steps/right.svg"></div>
+                    <div class="my-flex-box arrow"><img src="images/steps/right.svg"></div>
 
                     <div class="my-flex-box">
                         <img src="images/steps/2brif.svg">
                         <p>анализ карточки товара и внутренние работы (заголовок, характеристики, описание)</p>
                     </div>
 
-                    <div class="my-flex-box"><img src="images/steps/right.svg"></div>
+                    <div class="my-flex-box arrow"><img src="images/steps/right.svg"></div>
 
                     <div class="my-flex-box">
                         <img src="images/steps/3sloimost.svg">
@@ -98,14 +98,14 @@
                         <p>созвон для мозгового штурма</p>
                     </div>
 
-                    <div class="my-flex-box"><img src="images/steps/right.svg"></div>
+                    <div class="my-flex-box arrow"><img src="images/steps/right.svg"></div>
 
                     <div class="my-flex-box">
                         <img src="images/steps/5otchet.svg">
                         <p>ведение рекламных компаний, мониторинг позиций</p>
                     </div>
 
-                    <div class="my-flex-box"><img src="images/steps/right.svg"></div>
+                    <div class="my-flex-box arrow"><img src="images/steps/right.svg"></div>
 
                     <div class="my-flex-box">
                         <img src="images/steps/6oplata.svg">
@@ -204,7 +204,7 @@
                                     </p>
                                 </div>
                                 <div class="input-group">
-                                    <textarea class="text" minlength="10" name="message" id="message"></textarea>
+                                    <textarea class="text" minlength="10" name="message" id="message" placeholder="Ответы сюда:"></textarea>
                                     <label for="message"></label>
                                 </div>
                             </div>
