--- a/index.html
+++ b/index.html
@@ -72,47 +72,46 @@
         <div id="steps-row" class="container wide-row">
             <h2>Как проходит работа (шаги)</h2>
             <div class="row">
-                <div class="my-flex-cont">
 
-                    <div class="my-flex-box">
+                <div class="image-container">
+                    <div class="image-with-text">
                         <img src="images/steps/1celi.svg">
                         <p>постановка задачи</p>
                     </div>
-
-                    <div class="my-flex-box arrow"><img src="images/steps/right.svg"></div>
-
-                    <div class="my-flex-box">
+                    <div class="image-arrow-container">
+                        <div class="image-arrow"></div>
+                    </div>
+                    <div class="image-with-text">
                         <img src="images/steps/2brif.svg">
                         <p>анализ карточки товара и внутренние работы (заголовок, характеристики, описание)</p>
                     </div>
-
-                    <div class="my-flex-box arrow"><img src="images/steps/right.svg"></div>
-
-                    <div class="my-flex-box">
+                    <div class="image-arrow-container">
+                        <div class="image-arrow"></div>
+                    </div>
+                    <div class="image-with-text">
                         <img src="images/steps/3sloimost.svg">
                         <p>тестовая реклама для фиксация основных конверсий</p>
                     </div>
-
-                    <div class="my-flex-box">
+                    <div class="image-with-text">
                         <img src="images/steps/4vypolnenie.svg">
                         <p>созвон для мозгового штурма</p>
                     </div>
-
-                    <div class="my-flex-box arrow"><img src="images/steps/right.svg"></div>
-
-                    <div class="my-flex-box">
+                    <div class="image-arrow-container">
+                        <div class="image-arrow"></div>
+                    </div>
+                    <div class="image-with-text">
                         <img src="images/steps/5otchet.svg">
                         <p>ведение рекламных компаний, мониторинг позиций</p>
                     </div>
-
-                    <div class="my-flex-box arrow"><img src="images/steps/right.svg"></div>
-
-                    <div class="my-flex-box">
+                    <div class="image-arrow-container">
+                        <div class="image-arrow"></div>
+                    </div>
+                    <div class="image-with-text">
                         <img src="images/steps/6oplata.svg">
                         <p>отчет о работе, рекомендации</p>
                     </div>
-
                 </div>
+
             </div>
         </div>
     </section>
@@ -204,7 +203,8 @@
                                     </p>
                                 </div>
                                 <div class="input-group">
-                                    <textarea class="text" minlength="10" name="message" id="message" placeholder="Ответы сюда:"></textarea>
+                                    <textarea class="text" minlength="10" name="message" id="message"
+                                              placeholder="Ответы сюда:"></textarea>
                                     <label for="message"></label>
                                 </div>
                             </div>
