--- a/index.html
+++ b/index.html
@@ -76,39 +76,39 @@
                 <div class="image-container">
                     <div class="image-with-text">
                         <img src="images/steps/1celi.svg">
-                        <p>постановка задачи</p>
+                        <p>Постановка задачи</p>
                     </div>
                     <div class="image-arrow-container">
                         <div class="image-arrow"></div>
                     </div>
                     <div class="image-with-text">
                         <img src="images/steps/2brif.svg">
-                        <p>анализ карточки товара и внутренние работы (заголовок, характеристики, описание)</p>
+                        <p>Анализ карточки товара и внутренние работы (заголовок, характеристики, описание)</p>
                     </div>
                     <div class="image-arrow-container">
                         <div class="image-arrow"></div>
                     </div>
                     <div class="image-with-text">
                         <img src="images/steps/3sloimost.svg">
-                        <p>тестовая реклама для фиксация основных конверсий</p>
+                        <p>Тестовая реклама для фиксация основных конверсий</p>
                     </div>
                     <div class="image-with-text">
                         <img src="images/steps/4vypolnenie.svg">
-                        <p>созвон для мозгового штурма</p>
+                        <p>Созвон для мозгового штурма</p>
                     </div>
                     <div class="image-arrow-container">
                         <div class="image-arrow"></div>
                     </div>
                     <div class="image-with-text">
                         <img src="images/steps/5otchet.svg">
-                        <p>ведение рекламных компаний, мониторинг позиций</p>
+                        <p>Ведение рекламных компаний, мониторинг позиций</p>
                     </div>
                     <div class="image-arrow-container">
                         <div class="image-arrow"></div>
                     </div>
                     <div class="image-with-text">
                         <img src="images/steps/6oplata.svg">
-                        <p>отчет о работе, рекомендации</p>
+                        <p>Отчет о работе, рекомендации</p>
                     </div>
                 </div>
 
@@ -210,7 +210,7 @@
                             </div>
                         </div>
                         <div class="col-12">
-                            <button>Отправить</button>
+                            <button type="submit">Отправить</button>
                         </div>
                     </form>
                 </div>
