--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 <main>
 
 
-    <!-- Блок 1-->
+    <!-- Спецпредложение -->
 
     <section id="promotion" class="wrapper style2">
-        <div id="promotion-row" class="container wide-row">
+        <div class="container wide-row">
             <img class="horn" src="images/horn.svg" alt="bullhorn">
             <h2>Специальное предложение:</h2>
             <div class="row">
@@ -111,6 +111,106 @@
                         <p>Отчет о работе, рекомендации</p>
                     </div>
                 </div>
+
+            </div>
+        </div>
+    </section>
+
+    <!-- Список вопросов -->
+
+    <section id="questions" class="wrapper style2">
+        <div id="questions-row" class="container wide-row">
+            <h2>Остались вопросы?</h2>
+            <div class="row">
+
+                <details>
+                    <summary>Кто такой SEO специалист и чем он занимается?</summary>
+                    <p>SEO-специалист — это человек, занимающийся продвижением сайтов в поисковых системах. Он должен
+                        иметь понимание базовых принципов поисковой оптимизации, а также знать о практических примерах и
+                        принципах продвижения сайтов. Он должен понимать понятия, такие как метатеги, URL, релевантные
+                        заголовки и описания, контент-маркетинг, добавление сторонних материалов, микроразметка,
+                        размещение текстовой разметки, верстка, платные рекламные кампании, привлечение посетителей в
+                        том числе из социальных сетей, продвижение приложений и многое другое. </p>
+                    <p>SEO-специалист должен иметь практическое понимание программирования, веб-разработки, аналитики и
+                        веб-аналитики, чтобы максимально эффективно продвигать сайт. Он должен уметь проверять такие
+                        вещи, как наличие и корректность редиректов, дублей, файлов robots.txt и sitemap.xml,
+                        соответствие протоколам HTTPS.</p>
+                    <p>Он также должен проверять адаптивность сайта и его быстродействие. SEO-специалист должен знать,
+                        как правильно размещать различные элементы и контент на сайте, чтобы улучшить привлечение
+                        потенциальных клиентов, увеличить узнаваемость бренда и повысить продажи.Для этого он должен
+                        понимать понятия, такие как линкбилдинг, настройка платных рекламных кампаний, аналитическая
+                        статистика и многое другое. </p>
+                    <p>Он должен принимать во внимание поведение посетителей и отслеживать их действия на сайте. Он
+                        также должен знать, как правильно использовать такие инструменты, как Google Search Console и
+                        Google Analytics, чтобы получать аналитическую статистику и отслеживать потенциальные проблемы.
+                        Он также должен применять принципы контент-маркетинга для привлечения посетителей и продвижения
+                        сайта. Он должен понимать, как создавать интересные подборки материалов, проводить рассылки.</p>
+                </details>
+
+
+                <details>
+                    <summary>Сколько зарабатывает SEO-специалист?</summary>
+                    <p>Зарплата SEO-специалиста зависит от многих факторов, однако, в целом, она может колебаться от 30
+                        000 до 300 000 рублей в месяц. Обязанности SEO-специалиста включают настройку сервера,
+                        оптимизацию HTML-кода, настройку и изменение Title, Description, создание текстовой
+                        уникальности, добавление и изменение редиректов, просмотр целостности и правильности ссылающихся
+                        страниц, настройка сниппетов, внесение изменений в навигацию, и прочие задачи. </p>
+                    <p>Зарплата SEO-специалиста зависит от многих факторов, однако, в целом, она может колебаться от 30
+                        000 до 300 000 рублей в месяц. Обязанности SEO-специалиста включают настройку сервера,
+                        оптимизацию HTML-кода, настройку и изменение Title, Description, создание текстовой
+                        уникальности, добавление и изменение редиректов, просмотр целостности и правильности ссылающихся
+                        страниц, настройка сниппетов, внесение изменений в навигацию, и прочие задачи. </p>
+                    <p>Например, вебмастер может зарабатывать от 30 000 рублей в месяц, однако, чаще всего плата
+                        вакансий варьируется от 60 000 до 150 000 рублей в месяц. Фрилансеры могут зарабатывать прямо
+                        пропорционально усилиям, вложенным в проект, однако в большинстве случаев доходы от проектов
+                        зависят от правильности и грамотности настроек. Для освоения навыков SEO достаточно просмотреть
+                        онлайн-курсы, но для успеха необходимо собственное практическое освоение и наращивание
+                        частотности посещений и доходов с сайта.</p>
+                </details>
+
+                <details>
+                    <summary>Какие инструменты SEO-оптимизатора существуют?</summary>
+                    <p>Согласно практике SEO-оптимизатора, существуют различные инструменты, которые можно использовать
+                        для оптимизации сайта. Это могут быть такие базовые инструменты, как часто используемые слова,
+                        текстовая оптимизация, правильные мета-теги, корректный код и правильный размер сниппета, а
+                        также инструменты для оптимизации поисковых движков, такие как редиректы, ранжирование страниц,
+                        использование мета-тегов для разбивки на темы, инструменты для работы с мобильными устройствами
+                        и другие. Кроме того, для оптимизации сайта могут требоваться навыки, приобретаемые на фриланс
+                        площадках, или в Нетологии, где часто владельцы сайтов могут освоить основы SEO-оптимизации и
+                        правильно применять инструменты, такие как Frog, которые приносят плюс в поисковом ранжировании
+                        сайта. Таким образом, существует множество инструментов, которые могут применяться для
+                        SEO-оптимизации, и видны результаты, хотя их нужно разобраться и настроить вручную.</p>
+                </details>
+
+                <details>
+                    <summary>Как грамотно самостоятельно провести SEO-оптимизацию, чтобы ранжироваться в поисковых
+                        движках?
+                    </summary>
+                    <p>Для начала стоит разобраться с терминами и понять суть SEO-оптимизации. Далее нужно оценить
+                        текущее состояние сайта и проанализировать потенциальные проблемы, которые могут плохо влиять на
+                        его ранжирование. После этого можно приступить к непосредственной оптимизации сайта, которая
+                        обычно начинается с аудита структуры сайта и оптимизации файлов, их size и путей. Далее
+                        необходимо вносить грамотные изменения в контент сайта, освоить отдельные практики для разных
+                        языков и подключить более эффективные инструменты аналитики. Все эти изменения должны быть
+                        проанализированы и оценены, а затем проверены на отказы и взаимодействие с поисковыми движками.
+                        Если все сделано правильно, сайт должен ранжироваться в поисковых движках гораздо лучше, чем
+                        ранее.</p>
+                </details>
+
+
+                <details>
+                    <summary>Какие преимущества предлагает SEO-оптимизация по сравнению с рекламой?</summary>
+                    <p>SEO оптимизация и реклама в большей степени отличаются друг от друга, чем сходятся. Основные
+                        преимущества SEO оптимизации по сравнению с рекламой заключаются в том, что результаты SEO
+                        оптимизации могут рости практически бесконечно, в отличие от рекламы, где приходится постоянно
+                        вносить значительные дополнительные доходы. Кроме того, SEO оптимизация не требует прямых затрат
+                        и приносит более длительные результаты, потому что поисковые системы приоритетно обрабатывают
+                        грамотно оптимизированные сайты. В отличие от этого, реклама обычно стоит денег, а в результате
+                        рекламодатель получает непостоянные клики и просмотры. Таким образом, SEO оптимизация проще,
+                        дешевле и более долгосрочна, чем реклама.</p>
+                    <p></p>
+                    <p></p>
+                </details>
 
             </div>
         </div>
