--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                         <li>Помогу выбрать стратегию SEO-продвижения</li>
                     </ul>
                     <br>
-                    <button>Получить расчет</button>
-                    <button>Связаться</button>
+                    <a href="#brief" class="button">Получить расчет</a>
+                    <a href="#brief" class="button">Связаться</a>
                 </div>
             </div>
         </div>
@@ -62,6 +62,7 @@
                     </div>
                     <img class="promotion-svg" src="images/promotion.svg">
                 </div>
+                <a href="#brief" class="button">Получить расчет</a>
             </div>
         </div>
     </section>
@@ -115,6 +116,31 @@
             </div>
         </div>
     </section>
+
+
+    <!-- Заполните бриф -->
+
+    <section class="wrapper style2">
+        <div class="container wide-row">
+            <div class="row">
+                <div id="brief-box" class="box style1">
+                    <div id="brief-img">
+                        <img class="brief" src="images/brief.png">
+                    </div>
+                    <div class="text">
+                        <h2>Заполните бриф</h2>
+                        <p> из 11 вопросов и получите коммерческое предложение с прогнозом стоимости, сроками
+                            продвижения и видами работ.</p>
+                        <p>+ Юзабилити аудит из 10 пунктов в подарок.</p>
+
+                        <a href="#brief" class="button">Получить расчет</a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
 
     <!-- Список вопросов -->
 
@@ -329,7 +355,7 @@
                     <p>Индивидуальный предприниматель<br>Шилов Геннадий Игоревич</p>
                     <p>ИНН 330407536152</p>
                     <p>ОГРНИП 321332800061879</p>
-                    <button>Записаться на консультацию</button>
+                    <a href="#brief" class="button">Записаться на консультацию</a>
                 </div>
 
 
