--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
 
     <section id="promotion" class="wrapper style2">
         <div class="container wide-row">
-            <img class="horn" src="images/horn.svg" alt="bullhorn">
             <h2>Специальное предложение:</h2>
             <div class="row">
                 <div id="promotion-box" class="box style1 wide-box">
@@ -67,68 +66,24 @@
         </div>
     </section>
 
-    <!-- листалка -->
-    <section id="slider">
-        <div class="swiper-container">
-            <div class="swiper-wrapper">
-                <div class="slider-item swiper-slide">
-                    <div class="slider-image-wrapper">
-                        <img class="slider-image"
-                             src="https://images.unsplash.com/photo-1498307833015-e7b400441eb8?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2600&q=80"
-                             alt="SliderImg">
-                    </div>
-                    <div class="slider-item-content">
-                        <h1>Postcards From Italy</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore</p>
-                    </div>
-                </div>
-                <div class="slider-item swiper-slide">
-                    <div class="slider-image-wrapper">
-                        <img class="slider-image"
-                             src="https://images.unsplash.com/photo-1491900177661-4e1cd2d7cce2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2250&q=80"
-                             alt="SliderImg">
-                    </div>
-                    <div class="slider-item-content">
-                        <h1>Bunker</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore</p>
-                    </div>
-                </div>
-                <div class="slider-item swiper-slide">
-                    <div class="slider-image-wrapper">
-                        <img class="slider-image"
-                             src="https://images.unsplash.com/photo-1482192505345-5655af888cc4?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=2600&q=80"
-                             alt="SliderImg">
-                    </div>
-                    <div class="slider-item-content">
-                        <h1>Small Mountain</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore</p>
-                    </div>
-                </div>
-                <div class="slider-item swiper-slide">
-                    <div class="slider-image-wrapper">
-                        <img class="slider-image"
-                             src="https://images.unsplash.com/photo-1564604761388-83eafc96f668?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2250&q=801.2.1&auto=format&fit=crop&w=2167&q=80"
-                             alt="SliderImg">
-                    </div>
-                    <div class="slider-item-content">
-                        <h1>Walking On a Dream</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore</p>
-                    </div>
-                </div>
-            </div>
-            <div class="slider-buttons">
-                <button class="swiper-button-prev">Prev</button>
-                <button class="swiper-button-next">Next</button>
-            </div>
+    <!-- Слайдер -->
 
-            <div class="swiper-pagination"></div>
+    <section id="slider" class="wrapper style2">
+        <div class="container wide-row">
+            <div class="row">
+                <div class="box style1">
+                    <h2>Кейсы:</h2>
+                    <div class="slider-container">
+                        <img src="" alt="Slider Image">
+                        <h3>Заголовок</h3>
+                        <p>Текст</p>
+                        <button id="nextBtn">Вперед</button>
+                        <button id="prevBtn">Назад</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
-
 
     <!-- Шаги работы -->
 
